feat: reworked the overlay info panel a bit
Now prettier and repositionable!